# promethean

./: .#.envrc  .#AGENTS.md  .#HUMANS.md  .#build-errors.txt  .#docker-compose.yml  .#ecosystem.config.mjs  .#eslint.config.mjs  .#eslint.config.ts  .#hack.json  .#hacks.ts  .#opencode.json  .#pipelines.json  .#promethean.kanban.json  .biomeignore  .coderabbit.yaml  .dir-locals.el  .dir.locals.el  .env  .env.example  .eslintignore  .gitignore  .gitmodules  .indexer-state.json  .markdownlint.yml  .mcp.json  .npmrc  .nxignore  .pre-commit-config.yaml  .prettierignore  .projectile  .semgrep.yaml  .semgrepignore  .volta  202508071115.md  AGENTS.md  AGENTS.md.backup.20251017_223017  AGENTS.md.bak  CHANGELOG.md  CLAUDE.md  CROSS_REFERENCES.md  (+242 more)
.benchmark-temp/: buildfix-metrics-1760595541124.json
.changeset/: config.json
.clojure/: deps.edn
.clojure-mcp/: config.edn  scratch_pad.edn
.cpcache/: 1188567EBAF917C91C07E22DB5F14B23.basis  1188567EBAF917C91C07E22DB5F14B23.cp  1499287966.basis  1499287966.cp  1499287966.main  1499287966.manifest  1553212575.basis  1553212575.cp  47CBAF3E2E8ACFA0C1F708EDB0E18A8F.basis  47CBAF3E2E8ACFA0C1F708EDB0E18A8F.cp  73D24DA794E646215E64EED86FD80D4F.basis  73D24DA794E646215E64EED86FD80D4F.cp  A059B00CD6732800A36156BEAA361E16.basis  A059B00CD6732800A36156BEAA361E16.cp
.devcontainer/: devcontainer.json
.git-rewrite/: backup-refs  commit  index  message  parse  raw-refs  revs
.github/: CODEOWNERS  labeler.yml
.lsp/: config.edn
.makemd/: superstate.mdc
.obsidian/: app.json  community-plugins.json  (+1 more)
shared/py/ipc/: pyproject.toml
(+21334 files in other folders)
