[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-web"
version = "0.0.1"
description = "Web framework utilities for Promethean services"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.8",
]

[project.optional-dependencies]
# FastAPI web framework
fastapi = [
    "fastapi>=0.115",
    "starlette>=0.47",
    "uvicorn>=0.30",
]

# Flask web framework
flask = [
    "flask>=3",
    "flask-cors>=6",
    "gunicorn>=23",
    "waitress>=3",
]

# WebSocket support
websockets = [
    "websockets>=11.0",
]

# Development tools
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
